# looping-louie-v2

./: .cproject  .gitignore  .project  CMakeLists.txt  Flash Debug.launch  Flash Release.launch  Looping Louie V2 Debug.launch  README.md  done.txt  find_diff.sh  motor_control  ressource_mapping.ods
doku/: m74hc166b1.txt  motor_control  ressource_mapping.ods
include/: ll_anim.h  ll_anim_game_start.h  ll_external.h  ll_game.h  ll_led.h  ll_lightbarrier.h  ll_motor.h  ll_player.h  ll_renderer.h  ll_reset_switch.h  ll_switch.h  ll_system.h
include/anim/: game_exit.h  game_pause.h  game_start.h  player_lost.h  player_lost_alone.h  round_run.h  round_standby.h  round_start.h  round_wait_for_start.h  system_boot.h
include/hardware/: ll_74hc166.h  ll_gpio.h  ll_pwm.h  ll_renderer.h  ll_system.h
src/: _initialize_hardware.c  ll_anim.c  ll_anim_game_start.c  ll_external.c  ll_game.c  ll_led.c  ll_lightbarrier.c  ll_motor.c  ll_player.c  ll_renderer.c  ll_reset_switch.c  ll_switch.c  ll_system.c  main.c
src/anim/: game_exit.c  game_pause.c  game_start.c  player_lost.c  player_lost_alone.c  round_run.c  round_standby.c  round_start.c  round_wait_for_start.c  system_boot.c
src/hardware/: ll_74hc166.c  ll_gpio.c  ll_pwm.c  ll_renderer.c  ll_system.c
system/include/arm/: semihosting.h
system/src/cortexm/: _initialize_hardware.c
